article-3/style.css
@font-face{
    font-family: "InSans";
    src: url("./fonts/InstrumentSans-VariableFont_wdth,wght.ttf") format('truetype');
    font-weight: 100 900;
    font-style: normal;
}
@font-face{
    font-family: "InSerif";
    src: url("./fonts/InstrumentSerif-Regular.ttf") format('truetype');
    font-weight: 100 900;
    font-style: normal;
}

:root{
    --off-white:#F2F4ED ;
    --light-green:#D4E9F6;
    --green:#879ABB;
    --dark-green:#3A4F85;
    --darker-green:#012B62;
    --darkest-green:#161328;
    
    /* geronimo words */
    --orange:#df8734;
    --yellow:#edda6d;
    --pink:#ee9cbe;
    --rose: #c1363f;
    --purple: #9d369d;

    --pistachio:#a6cc90;
    --rosy:#d5a1ba;
    --aqua:#4faeab;
    --periwinkle:#7884d2;
    --sand:#b87466;


    /* line css pattern */
    --s: 120px; /* control the size*/
    --c1: #161328;
    --c2: #012b62;
    --c3: #3a4f85;
    --c4: #879abb;
    --c5: #d4e9f6;
    --_g: radial-gradient(#0000 70%,var(--c1) 71%);

    /* pattern grabbed from https://css-pattern.com/ */
    --circ-pattern: var(--_g),var(--_g) calc(var(--s)/2) calc(var(--s)/2),
    conic-gradient(var(--c2) 25%,var(--c3) 0 50%,var(--c4) 0 75%,var(--c5) 0);
    
}
html {
  
}
html{
    font-family:"InSans";
    background:var(--off-white);
}


/* nav formatting + responsiveness */
nav{
    justify-content: center;
    align-content: center;
    padding-block:1.75rem;
    

}
nav ul{
    display:flex;
    flex-direction: row;
    justify-content:space-evenly;
}

nav ul li{
    text-align: center;

}
#active-nav{
    color: var(--off-white);
    
}
#active-nav:hover{
    color: var(--dark-green);
}

nav a{
    font-family:"InSans";
    color: var(--darker-green);
    font-weight:500;
    font-size:.9rem;

    @media (500px <= width <= 850px){
        font-size:1rem;

    }
    @media (width > 850px){
        font-size:1.2rem;
    }
    
}
nav a:hover{
    color: var(--dark-green);
}


/* section within header */
.title-sec{
    margin-inline:1.2rem;

    @media (500px <= width <= 850px) {

    }
    @media (width > 850px) {
        display:flex;
        flex-direction: column;
        text-align:center;
    }
}


/* title formatting */
h1{
    color:var(--dark-green);
    font-size:3.5rem;
    line-height:3rem;
    margin-block:8rem;
    font-family: "InSerif";
    width:20rem;
    

    @media (500px <= width <= 850px) {
        font-size:5rem;
        line-height:4.5rem;
        width:30rem;
    }
    @media (width > 850px) {
        font-size: 5.5rem;
		line-height: 5rem;
        margin-inline: auto;
        width:50rem;
    }
}

h1 span{
    color:var(--darkest-green);
    font-size:3.5rem;
    line-height:3rem;
    margin-block:8rem;
    width:18rem;


    @media (500px <= width <= 850px) {
        font-size:5rem;
        line-height:4.5rem;
        width:30rem;
        
    }
    @media (width > 850px) {
        font-size: 5.5rem;
		line-height: 5rem;
        margin-inline: auto;
        width:50rem;
    }
}


/* author + date in header */
.og-text p{
    color:var(--darker-green);
    font-size:1.25rem;
    font-weight:450;
    line-height:1.25rem;
    margin-block-end:.3rem;
    text-align:right;

    @media (500px <= width <= 850px){
        font-size:1.5rem;
        line-height:1.5rem;

    }
    @media (width > 850px) {
        text-align:center;
        font-size:2rem;
        line-height:2rem;

    }

}

/* color line formatting */
.line{
    background:var(--green);
    margin-block-start:5rem;
}
#top-line{
    margin:0;
}

/* pattern grabbed from https://css-pattern.com/ */
.dark-line{
    /* background:var(--green); */
    margin-block-start:0;
    height:7.5rem;
    background:var(--circ-pattern);
    background-size: var(--s) var(--s);
}




/* first quote - context of article */
.context{
    color:var(--off-white);
    font-family:"InSerif";
    letter-spacing:.1ch;
    font-size:1.5rem;
    padding: 3rem 2rem;
    background:var(--dark-green);
    line-height:1.75rem;
    margin-block:3rem;
    text-align:center;
    margin-inline-start:0rem;
    text-wrap:balance;

    @media (500px <= width <= 850px){
        padding-inline: 5rem;
        font-size:1.75rem;
        line-height:2rem;

    }
    @media (width > 850px){
        padding-inline: 10rem;
        font-size:2rem;
        line-height:2.25rem;


    }

}
.context em{
    font-style:italic;
    text-decoration:underline;
    text-decoration-thickness: .05rem;
    text-underline-offset: .25rem;
}



article{
    /* margin-block-start:10rem; */
    font-size:1.2rem;
    line-height:1.75rem;
    color:var(--darkest-green);
    margin-block-end:10rem;
    
}
article .pg{
    margin-block:3rem 2rem;
    margin-inline:1rem;
    text-wrap:pretty;
    @media (width > 850px) {
        margin-inline-end: 7rem;
    }
}
.para{
    margin-block-start:7rem;
}
.label {
    /* display:none; */
    position:sticky;
    text-align:right;
    margin-block: 3rem 1rem;
    margin-inline-end:1rem;
    font-size: 5rem;
    font-weight:100;
    color:var(--green);
    
}
#individual-letter{
    margin-block: 3rem 1rem;
}

@media (width > 850px) {
    .label{
        display:block;
        margin-block:4rem 2rem;
        /* background:var(--dark-green); */
        /* padding:3rem 2rem; */
    /* margin-inline:1rem; */
        font-size: 4.5rem;
        color:var(--green);
        text-align:left;
        margin-inline-start:4rem;
        /* border-radius:100px;
        width:min-content;
        height:min-content; */
    }
    
	.para {
		display: grid;
        grid-template-columns:1fr 5fr;
        margin-inline-end: 2rem;
	}
    #individual-letter{
        margin-block-start:3.2rem;
    }
}
.pg em{
    /* font-weight: 500; */
    font-style:italic;
}
mark{
    background: var(--light-green);
    color:var(--darker-green);
}
blockquote{
    color:var(--off-white);
    font-family:"InSerif";
    letter-spacing:.1ch;
    font-size:1.75rem;
    padding: 3rem 2rem;
    background:var(--dark-green);
    line-height:2.2rem;
    margin-block:5rem;
    text-align:center;
    margin-inline-start:0rem;
    @media (width > 850px){
        margin-inline-start:1rem;
        margin-inline-end:7rem;
    }
}

.slant{
  display: inline-block;
  font-weight: 300;
  font-size: 1.3em;
  color: var(--dark-green);
  transform: rotate(-1.5deg);
}
.slant2{
  display: inline-block;
  font-weight: 300;
  font-size: 1.3em;
    color: var(--dark-green);
  transform: rotate(1.25deg);
}
.geronimo{
    display: inline-block;
    font-family:"InSerif";
    font-weight:900;
    font-size: 1.5rem;
    color:var(--sand);
}
.stroke {
  color: var(--pistachio);
  -webkit-text-stroke: .75px #000;
  font-weight: 600;
  font-size:1.5rem;
}
.shadow {
  text-shadow: 1.4px 1.4px 0 #8c1d98;
  font-weight: 500;
  font-size:1.5rem;
  color:var(--aqua);
  letter-spacing:.05ch;
}
.space {
  letter-spacing: 0.09em;
  font-weight: 500;
  color: var(--periwinkle);
  font-style:italic;
  /* font-family:"InSerif"; */
}
.shimmer {
    font-weight: bold;
    background: linear-gradient(
                90deg,
                #8aae4a 0%,
                #25d356 25%,
                #51a9bd 50%,
                #576dfe 75%,
                #8e76e4 100%
    );
    background-size: 200%;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
    animation: shimmer 5s linear infinite;
}



footer{
    background:var(--darkest-green);
    text-align:center;
    color:var(--green);
    font-size:1rem;
    padding-block: 2rem;
    /* letter-spacing:.25ch; */
}
footer nav a{
    color:var(--light-green);
}
footer nav a:hover{
    color:var(--dark-green);
}

